# cookiecutter-test

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yml  cookiecutter.json  pyproject.toml
control/: .terraform.lock.hcl  README.md  backend.tf  main.tf  outputs.tf
hooks/: post_gen_project.py  pre_gen_project.py
tests/: all_test.py
{{ cookiecutter.github_repo }}/: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  cookiecutter.json  pyproject.toml
{{ cookiecutter.github_repo }}/.ci/: yamllint.yml
{{ cookiecutter.github_repo }}/control/: README.md  Taskfile.yml  backend.tf  main.tf  variables.tf
{{ cookiecutter.github_repo }}/cookiecutter.github_repo/: .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  pyproject.toml
{{ cookiecutter.github_repo }}/cookiecutter.github_repo/control/: README.md  backend.tf  main.tf
{{ cookiecutter.github_repo }}/hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.github_repo }}/tests/: all_test.py
